--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ var _hmt = _hmt || [];
         <p class="tit">联系方式<span class="eng">Contact</span></p>
         <div class="body">
             <p>邮件: <a href="mailto:bsy0130@163.com" class="jump">bsy0130@163.com</a><span class="eng">E-mail: <a href="mailto:bsy0130@163.com" class="jump">bsy0130@163.com</a></span></p>
+            <p>导航页: <a href="//114.bsynet.cc" class="jump">114.BSYNET.cc</a><span class="eng">E-mail: <a href="//114.bsynet.cc" class="jump">114.BSYNET.cc</a></span></p>
         </div>
     </div>
     <div class="box text center lock" style="margin-top: var(--ph);">
