--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@ var _hmt = _hmt || [];
         <div class="body">
             <p>邮件: <a href="mailto:bsy0130@163.com" class="jump">bsy0130@163.com</a><span class="eng">E-mail: <a href="mailto:bsy0130@163.com" class="jump">bsy0130@163.com</a></span></p>
             <p>导航页: <a href="//114.bsynet.cc" class="jump">114.BSYNET.cc</a><span class="eng">Navigation page: <a href="//114.bsynet.cc" class="jump">114.BSYNET.cc</a></span></p>
+            <p>ICP备案: <a href="https://icp.gov.moe/?keyword=20240226" target="_blank" class="jump">萌ICP备20240226号</a><span class="eng">ICP: <a href="https://icp.gov.moe/?keyword=20240226" target="_blank">Moe ICP No. 20240226</a></span></p>
         </div>
     </div>
     <div class="box text center lock" style="margin-top: var(--ph);">
