--- a/ccua.html
+++ b/ccua.html
@@ -29,6 +29,7 @@
         .header h1 {
             margin: 0;
             font-size: 72px;
+            line-height: 200%;
         }
         label{
             font-weight: 150;
