--- a/content-zh-hans.html
+++ b/content-zh-hans.html
@@ -55,7 +55,7 @@ l1 27 14 -27 c8 -15 20 -73 26 -130 6 -57 18 -134 26 -172 19 -92 54 -351 60
                 position: fixed;
                 top: 0;left: 0;height: 100%;width: 100%;
                 z-index: 7;
-                background-image: 
+                background-image:
                     radial-gradient(circle at 30% 30%,#32ffea30,#00000000 80px),
                     radial-gradient(circle at 70% 60%,#ffbf2830,#00000000 160px),
                     radial-gradient(circle at 20% 70%,#3da86630,#00000000 140px),
@@ -147,7 +147,7 @@ l1 27 14 -27 c8 -15 20 -73 26 -130 6 -57 18 -134 26 -172 19 -92 54 -351 60
         document.body.style.overflow='auto';
         $(this).remove()"><span style="font-size: 15px;">已加载完成</span><span style="font-size: 30px;">开始</span></a>
     <script>
-        
+
 
 document.body.onload=()=>{
     $('#stt').addClass('show')
@@ -168,36 +168,36 @@ document.body.onload=()=>{
                     <stop offset="100%" style="stop-color:#9E3DEE;stop-opacity:1" />
                 </linearGradient>
             </defs>
-            <g transform="translate(0.000000,140.000000) scale(0.100000,-0.100000)" stroke="none" fill="url(#grad1)">
-                <path d="M668 1373 c-17 -4 -33 -67 -29 -114 2 -22 -4 -28 -41 -42 -24 -9 -62
-                -30 -86 -46 l-43 -28 36 -22 c20 -11 52 -21 71 -21 33 0 34 -1 34 -41 0 -49
-                16 -83 36 -75 8 3 14 2 14 -3 0 -17 -179 -241 -193 -241 -13 0 -3 -98 11 -112
-                8 -8 42 10 121 61 61 39 113 71 116 71 5 0 -3 -108 -11 -150 -1 -8 -3 -29 -3
-                -46 l-1 -31 -74 5 c-44 3 -88 0 -110 -8 -44 -14 -96 -80 -96 -121 0 -36 48
-                -73 113 -87 97 -20 166 27 191 131 8 35 18 34 65 -9 43 -38 85 -113 76 -135
-                -9 -22 -82 -73 -200 -139 -60 -33 -111 -61 -112 -60 -14 2 -24 -3 -46 -23 -14
-                -12 -36 -30 -49 -40 l-23 -19 44 7 c28 5 41 4 37 -3 -7 -12 118 19 153 37 13
-                7 21 8 17 3 -4 -6 2 -8 14 -5 11 3 20 8 20 12 0 4 9 7 19 8 17 1 75 25 160 66
-                14 7 39 26 56 43 26 25 32 40 34 81 2 46 -2 56 -51 124 -50 69 -58 75 -123
-                100 -40 16 -71 34 -73 43 -5 23 25 171 42 208 23 51 23 75 1 92 -17 12 -25 12
-                -70 -6 -27 -10 -71 -30 -97 -44 -27 -13 -48 -20 -48 -15 0 5 4 11 8 13 8 3
-                139 159 164 197 21 30 7 65 -34 82 -37 15 -32 29 23 57 33 17 44 29 45 47 1
-                14 -2 25 -7 25 -5 0 -9 6 -9 14 0 8 -9 21 -21 29 -18 13 -20 21 -14 61 10 63
-                -6 83 -57 69z m17 -875 c9 -8 -15 -61 -37 -85 -24 -26 -74 -38 -120 -29 -56
-                11 -62 19 -48 60 18 56 43 68 128 63 40 -2 75 -6 77 -9z"/>
-                <path d="M182 1158 c-5 -7 -22 -38 -37 -68 -15 -30 -31 -63 -36 -72 -5 -10 -9
-                -26 -9 -37 0 -10 -7 -24 -15 -31 -8 -7 -15 -22 -15 -35 0 -12 -11 -35 -24 -50
-                -20 -24 -23 -32 -14 -49 6 -12 14 -23 17 -26 4 -3 12 -18 19 -34 10 -23 17
-                -27 37 -23 14 2 25 3 25 0 0 -6 -24 -47 -38 -64 -7 -9 -10 -27 -8 -40 3 -13 5
-                -29 5 -35 1 -6 13 -23 27 -38 22 -21 26 -32 21 -63 -3 -21 -8 -45 -11 -54 -4
-                -10 7 -33 31 -62 36 -44 38 -45 56 -29 27 25 61 86 96 174 16 42 41 99 55 127
-                13 28 20 49 15 45 -12 -7 -11 13 1 55 12 41 10 39 -60 -66 -51 -77 -55 -81
-                -68 -62 -8 11 -25 24 -39 30 l-24 9 37 67 c20 38 45 80 55 95 24 33 24 41 0
-                62 -25 23 -81 23 -115 1 -34 -23 -44 -13 -17 16 12 13 21 28 21 34 0 14 55 65
-                71 65 5 0 8 4 5 8 -3 5 11 16 30 25 39 19 39 20 -20 89 -43 50 -57 57 -74 36z
-                m-52 -237 c-5 -9 -15 -25 -24 -36 -15 -20 -15 -20 -13 2 0 12 5 19 9 17 4 -3
-                8 -1 8 5 0 5 -7 14 -16 19 -12 6 -8 9 15 9 24 0 28 -3 21 -16z"/>
-            </g>
+         <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
+              width="170.000000pt" height="170.000000pt" viewBox="0 0 170.000000 170.000000"
+              preserveAspectRatio="xMidYMid meet">
+
+          <g transform="translate(0.000000,170.000000) scale(0.100000,-0.100000)"
+             fill="#000000" stroke="none">
+           <path d="M938 1593 c-9 -2 -27 -20 -39 -39 -34 -55 -63 -68 -158 -74 l-86 -5
+-3 -32 c-4 -41 27 -63 90 -63 26 0 49 -4 52 -8 3 -5 -5 -24 -18 -43 -12 -19
+-35 -58 -50 -88 -28 -55 -133 -214 -173 -264 -39 -48 -26 -97 26 -97 23 0 47
+13 148 82 47 32 113 62 120 55 2 -3 -17 -20 -44 -38 -26 -19 -82 -57 -123 -86
+-41 -29 -100 -66 -130 -82 l-55 -29 -35 19 c-43 23 -61 23 -127 0 -29 -10 -53
+-17 -53 -15 0 2 13 22 29 46 75 112 189 393 198 490 7 67 -5 88 -48 88 -34 0
+-42 -14 -59 -93 -15 -74 -50 -178 -82 -242 -23 -45 -154 -298 -200 -385 -23
+-45 -23 -75 2 -100 38 -38 77 -27 168 50 90 76 109 80 130 23 6 -16 24 -43 40
+-60 28 -30 36 -33 90 -33 58 0 59 1 99 48 22 26 55 73 73 105 38 68 58 82 125
+91 27 3 66 15 87 25 26 12 40 15 48 7 20 -20 10 -47 -22 -64 -18 -9 -52 -36
+-75 -58 -49 -47 -56 -86 -24 -125 16 -20 29 -24 69 -24 62 0 97 23 130 86 34
+66 46 75 77 61 60 -27 105 -1 105 61 0 41 26 136 61 223 16 41 29 87 29 102
+l1 27 14 -27 c8 -15 20 -73 26 -130 6 -57 18 -134 26 -172 19 -92 54 -351 60
+-447 6 -91 -8 -121 -65 -140 -102 -34 -371 15 -423 77 -7 8 -34 26 -60 40 -26
+13 -50 28 -54 34 -3 5 -17 10 -31 10 -72 0 20 -112 148 -179 111 -58 143 -69
+275 -92 105 -18 118 -18 185 -4 51 10 80 22 98 40 24 24 25 32 29 149 2 93 -2
+155 -18 247 -11 68 -25 162 -31 209 -6 47 -19 119 -30 160 -11 41 -20 97 -20
+124 0 27 -5 78 -10 115 -6 36 -15 95 -21 131 -14 86 -31 112 -72 108 -30 -3
+-33 -6 -39 -48 -8 -59 -32 -137 -52 -175 -9 -16 -16 -37 -16 -45 0 -32 -108
+-255 -124 -258 -22 -5 -46 16 -46 38 0 10 -18 36 -40 57 l-40 40 60 47 c52 41
+60 52 60 81 0 36 -12 45 -62 45 -36 0 -189 -36 -236 -56 -18 -8 -39 -14 -47
+-14 -21 0 -18 24 5 45 10 9 36 50 55 89 20 39 45 80 55 91 11 11 33 52 51 90
+17 39 42 82 56 96 17 19 24 35 21 55 -2 24 -8 29 -33 31 -16 0 -38 -1 -47 -4z"/>
+          </g>
         </svg>
         <p style="font-size: 20px;margin: 0 0 0 -20px;color: #fff; writing-mode: tb;text-align: start;">Qi</p>
     </div>
@@ -228,7 +228,7 @@ document.body.onload=()=>{
                     <p>生日</p>
                     <p>2009 年</p>
                 </div>
-                <div> 
+                <div>
                     <!-- Sex -->
                     <p>生理性别</p>
                     <p>男</p>
@@ -367,7 +367,7 @@ document.body.onload=()=>{
         <!-- <svg viewBox="0,0,154,317" overflow="hidden" style="height: 20vh;"><g transform="translate(-495 -69)"><path d="M507.97 270.41C507.993 273.509 497.056 191.746 506.018 142.069 509.851 120.827 518.059 93.8332 539.196 82.081 556.985 72.1902 589.487 72.3983 600.615 89.9134 607.906 101.382 600.405 122.586 588.417 128.879 576.523 135.122 552.385 134.021 550.039 116.702 548.105 102.4 558.899 93.8824 574.326 99.35 584.516 102.96 580.672 113.551 580.672 113.551" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M520.611 148.936C519.836 144.32 522.753 137.42 527.556 136.586 532.748 135.687 539.04 141.528 539.464 146.56 539.865 151.268 534.963 157.196 530.037 157.484 525.719 157.737 521.298 153.026 520.611 148.936Z" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M617.535 133.038C617.127 129.352 619.829 124.405 623.427 123.636 628.049 122.646 634.005 126.953 635.214 131.553 636.439 136.187 633.529 143.651 628.831 144.42 623.574 145.28 618.125 138.369 617.535 133.038Z" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M538.491 152.407C538.491 152.407 559.35 161.627 574.086 160.378 602.187 157.997 617.677 143.632 617.489 143.495" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M569.562 133.495C569.562 133.495 567.416 165.912 569.204 180.157 570.992 194.401 570.398 201.495 570.398 201.495" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M527.49 181.096C527.49 181.096 547.689 182.704 557.805 182.474 569.841 182.206 582.005 181.713 593.782 179.214 601.606 177.555 616.49 171.496 616.49 171.496" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M526.491 231.499C526.491 231.499 526.54 217.638 533.163 210.697 546.562 196.664 574.854 204.072 591.752 204.034 617.299 203.978 624.491 191.499 624.491 191.499" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M526.579 249.506C526.579 249.506 527.118 264.591 525.516 271.881 521.969 287.989 508.611 301.292 506.9 317.7 505.528 330.87 507.495 345.241 513.937 356.789 517.77 363.662 531.486 372.506 531.486 372.506" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M526.018 317.508C526.018 317.508 520.78 327.281 529.683 336.73 535.787 343.205 545.488 336.331 545.488 336.331" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M621.491 219.503C621.491 219.503 604.286 226.405 589.908 225.999 578.591 225.68 561.199 220.3 552.911 228.5 540.056 241.218 547.932 271.505 544.543 292.879 543.395 300.122 540.491 314.503 540.491 314.503" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M590.353 231.506C590.353 231.506 567.908 254.905 563.825 269.94 561.47 278.623 559.732 286.309 565.817 296.865 570.164 304.407 591.895 309.147 593.388 326.271 594.416 338.021 587.522 346.371 581.273 354.459 574.613 363.081 555.49 374.506 555.49 374.506" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M575.492 254.504C575.492 254.504 596.538 254.921 603.828 261.326 610.366 267.072 614.858 277.183 613.114 285.696 610.618 297.855 587.218 312.504 587.218 312.504" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M569.492 273.508C569.492 273.508 582.031 278.006 587.271 281.918 597.389 289.476 607.499 298.57 612.422 310.1 616.478 319.599 617.94 331.103 614.779 340.925 609.665 356.815 596.281 372.686 582.507 379.508" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M564.364 320.508C564.364 320.508 571.743 326.748 568.794 335.061 565.84 343.377 554.49 350.508 554.49 350.508" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/><path d="M636.575 159.501C636.575 159.501 642.736 200.056 639.611 243.143 637.345 274.403 629.495 313.501 629.495 313.501" stroke="#9A1600" stroke-width="11.3333" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="#FFFFFF" fill-rule="evenodd" fill-opacity="0"/></g></svg> -->
         <!-- <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="537.000000pt" height="80pt"
             viewBox="0 0 537.000000 537.000000" preserveAspectRatio="xMidYMid meet">
-        
+
             <g transform="translate(0.000000,537.000000) scale(0.100000,-0.100000)" fill="#9A1600" stroke="none">
                 <path d="M2660 5201 c0 -5 -486 -289 -1079 -632 l-1080 -624 0 -1280 -1 -1280
                     516 -298 c334 -194 521 -296 532 -292 37 14 382 218 382 226 0 5 4 8 8 6 5 -1
