--- a/content-zh-hans.html
+++ b/content-zh-hans.html
@@ -3097,7 +3097,7 @@ c18 -21 30 -27 37 -20 17 17 -36 61 -85 71 -44 8 -146 9 -206 2z"/>
 
         <p style="margin-top: 10px;color: #aaa;">2024 年 7 月</p>
         <div style="margin-top: 20px;">
-            <p>开头 “绮” 字源于一位人名</p>
+<!--             <p>开头 “绮” 字源于一位人名</p> -->
             <p>背景来自 <a href="http://www.microsoft.com/zh-cn/bing/bing-wallpaper" class="a jump">Bing Wallpaper</a></p>
         </div></div>
         <p style="font-size: 18px;color: #555;margin-bottom: 5px;text-align: center;">众里寻他千百度, 蓦然回首<br>那人却在灯火阑珊处。</p>
