--- a/content-zh-hans.html
+++ b/content-zh-hans.html
@@ -419,7 +419,7 @@ l1 27 14 -27 c8 -15 20 -73 26 -130 6 -57 18 -134 26 -172 19 -92 54 -351 60
             <p>个人博客</p>
             <p>导航页</p>
             <p>简易通讯</p>
-            <p>Django网站(以接近完成)</p>
+            <p>Django网站(已接近完成)</p>
             <p>Google, Github, Wiki 镜像站</p>
         </div>
     </div>
