--- a/content-zh-hans.html
+++ b/content-zh-hans.html
@@ -112,56 +112,8 @@ l1 27 14 -27 c8 -15 20 -73 26 -130 6 -57 18 -134 26 -172 19 -92 54 -351 60
     </style>
     <div class="lay" style="margin: 0;">
         <p style="font-size: 40px;">正在等待加载...</p>
-        <p style="font-size: 20px;">下滑看看吧 >u-)o</p>
     </div>
-    <div class="lay">
-        <div class="highlighta">
-            <p style="font-size: 30px;margin:0 10px">渔家傲·星源</p>
-            <p style="font-size: 20px;">向晚暮风拂袖顾，婵娟星海耀千古。亭台既去诗不复，星源处，银汉皎皎月明孤。
-                日轮月转一仰俯，河山越尽沧桑书。千里东风青云负，乾坤舞，扶摇浩浩寰宇舒。</p>
-        </div>
-    </div>
-    <div class="lay">
-        <p style="font-size: 40px;">你的网络有些慢了...</p>
-        <p style="font-size: 20px;">来篇长的</p>
-    </div>
-    <div class="lay">
-        <div class="highlighta" id="drl">
-            <p style="font-size: 30px;margin:0 10px">梦幻·星源</p>
-            <p style="font-size: 20px;">徜徉于天地造化者神州大地，顾环己，山岳峥嵘，峰峦屹立。
-                徘徊在古今流转间金波秋意，思泛起，时节逸远，年随风去。
 
-                暮风兮向晚者忽吹拂，袍袖兮因风者飏簌簌。迎面扑，转头顾。
-                旷野兮接天者无边处，婵娟兮星海者耀千古。天地苍，随月溯。
-
-                漫漫千年波澜一路，盛时广厦败时土。
-                风月花雪北风吹处，文里权兴政覆，诗里斜阳草树。
-                颤颤百载风云无数，枭者英雄义者负。
-                青砖黛瓦红墙不复，别去亭台楼阁，送走诗歌词赋。
-
-                沧桑再顾，沧海一粟，竹笛悠悠兮波起伏。
-                星源起处，星辰一如，银汉皎皎兮月明孤。
-
-                嗟夫叹往事，看江水起山巅、纵平原、拂过峰峦、遍走人间。
-                噫唏望天边，观东风生浩海、过江面、吹散浮云、巨浪滔天。
-
-                日轮月转一俯仰间，天改地换两百余年。
-                贼起寇入千年神州，山赤海血万里红遍。
-
-                观存亡者河山，哀怜不露；看兴衰者黄土，沧桑尽书。
-                阅河山者何人？泊船江月，寄心林泉邃处。
-                叹过往者怀古，鉴于喜怒；望后来者志笃，行之阔步。
-                阅江山者何人？拄杖山路，纵情江海鸿鹄。
-
-                涉河溪，济江海，可届天涯鲜迹处。
-                越群巅，行漫路，能达无央沧溟渚。
-
-                山巅顾，千里扶摇极天而赴，虎咆龙吟殷壑谷。
-                东风携鹏啼鸾音，浩浩青云负，盈于寰宇乾坤舞。
-                星源处，一缕清风起窗以入，青冥红霞布棂户。
-                暮色传蝉歌虫鸣，悠悠明月浮，畅于天地神心舒。</p>
-        </div>
-    </div>
 </div>
 <a class="a" id="stt" onclick="
         $('#ldb').hide();
@@ -416,8 +368,8 @@ l1 27 14 -27 c8 -15 20 -73 26 -130 6 -57 18 -134 26 -172 19 -92 54 -351 60
     <div class="card">
         <div class="body" style="padding: 20px;">
             <p>---BSYNET系列网站---</p>
-            <p>个人博客</p>
-            <p>导航页</p>
+            <p><a href="https://blogs.bsynet.cc/" style="text-decoration: none; color: white">个人博客</a></p>
+            <p><a href="https://114.bsynet.cc/" style="text-decoration: none; color: white">导航页★</a></p>
             <p>简易通讯</p>
             <p>Django网站(已接近完成)</p>
             <p>Google, Github, Wiki 镜像站</p>
