--- a/content-zh-hans.html
+++ b/content-zh-hans.html
@@ -3116,7 +3116,7 @@ c18 -21 30 -27 37 -20 17 17 -36 61 -85 71 -44 8 -146 9 -206 2z"/>
             </p>
         </div>
     </div>
-    <p style="font-size: 18px;color: #555;margin-bottom: 5px;text-align: center;">众里寻他千百度, 蓦然回首<br>那人却在灯火阑珊处。
+    <p style="font-size: 18px;color: #555;margin-bottom: 5px;text-align: center;"><a href="https://icp.gov.moe/?keyword=20240226">萌ICP备20240226号</a>
     </p>
 </div>
 <script src="main.js"></script>
