--- a/ccua.html
+++ b/ccua.html
@@ -108,6 +108,7 @@
                 <span>2024年7月16日</span>
             </div>
         </div>
+        <img src="ccua.png" alt="">
         <div class="footer" style="text-align: center">
 <!--            <p>此证件是本站为您颁发的网站会员证，CCUA 证件依据提供的 UOM 考试合格证明颁发，受到本站认可，仅代表用户提供了信息，信息为用户自主填写，用户需确保真实性，本证件不具备强制法律效力，CCUA 不做任何担保，亦不承担任何责任。最终解释权归 CCUA 所有并保留一切权利。</p>-->
 <!--            <p>CCUA 提醒您：飞行不规范，亲人两行泪。请遵守法律法规，安全飞行。</p>-->
